Clicking on tomato changes duration
- To switch between a 25 minute and 50 minute pomodoro, click on the tomato. Needed to update the business logic a bit to differentiate between the total duration vs current remaining duration by introducing a new variable (pomodoroDuration). Whoo! Thank you justinwlin

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 #tomato {
   font-size: 50px;
   position: relative;
-  bottom: 7px;
+  bottom: 5px;
+  background:transparent;
 }
 
 #countdown {
